* Bug #34765: fix word wrapping on small screens
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55130 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-diagnostic/umc/js/diagnostic.css
+++ b/management/univention-management-console-module-diagnostic/umc/js/diagnostic.css
@@ -15,9 +15,7 @@
 }
 
 .umc-diagnostic-description {
-	/*background-color: #e6e6e6; border: thin solid #d3d3d3;*/ 
-	white-space: pre;
-	word-break: break-all;
+	white-space: pre-wrap;
 	word-wrap: break-word;
 }
 .umc-diagnostic h1 {
